# license_complaince_report_policy_based

./: .env.example  .gitignore  CLAUDE.md  README.md  example_license_report.xlsx  pyproject.toml  requirements.txt
specs/: adding_repo_name_implementation_plan.md  implementation_plan_review_license_list.md  new_feature_filter_by_ecosystem_pypi.md  new_feature_filter_license_policy.md  new_feature_get_deps_per_repo_and_ietr_over_Repos.md  new_feature_highlight_bad_license_implementation_plan.md  new_feature_highlight_bad_license_types.md  new_feature_review_license_list.md  new_feature_show_repo_name_instead_of_repo_id.md  technical_implementation_plan.md  technical_requirements_doc.md
src/: semgrep_deps_export.py
src/semgrep_deps_export/: __init__.py  api_client.py  config.py  data_processor.py  excel_exporter.py  main.py  utils.py
tests/: __init__.py  test_api_client.py  test_config.py  test_data_processor.py  test_integration.py  test_utils.py
